--- a/index.html
+++ b/index.html
@@ -2,11 +2,15 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>hello world</title>
+<title>eyewind</title>
 </head>
 
 <body>
-hello world
+  <p id="time"></p>
+<script >
+  var e = document.getElementById("time");
+  e.innerHTML = Date();
+</script>
 </body>
 
 </html>
